@@ -140,7 +140,7 @@
       </sizepolicy>
      </property>
      <property name="currentIndex">
-      <number>0</number>
+      <number>1</number>
      </property>
      <widget class="QWidget" name="Seite_5">
       <layout class="QVBoxLayout" name="verticalLayout_20">
@@ -296,6 +296,16 @@
           <property name="verticalSpacing">
            <number>2</number>
           </property>
+          <item row="3" column="0" colspan="4">
+           <widget class="QFrame" name="frame_2">
+            <property name="frameShape">
+             <enum>QFrame::HLine</enum>
+            </property>
+            <property name="frameShadow">
+             <enum>QFrame::Raised</enum>
+            </property>
+           </widget>
+          </item>
           <item row="0" column="0">
            <widget class="QLabel" name="label_76">
             <property name="sizePolicy">
@@ -328,6 +338,19 @@
             </property>
             <property name="maximum">
              <double>1000.000000000000000</double>
+            </property>
+           </widget>
+          </item>
+          <item row="10" column="0" colspan="2">
+           <widget class="QCheckBox" name="genClef">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+            <property name="text">
+             <string>Create clef for all systems</string>
             </property>
            </widget>
           </item>
@@ -477,7 +500,7 @@
             </property>
            </widget>
           </item>
-          <item row="3" column="0">
+          <item row="4" column="0">
            <widget class="QLabel" name="label_72">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
@@ -490,7 +513,7 @@
             </property>
            </widget>
           </item>
-          <item row="3" column="1">
+          <item row="4" column="1">
            <widget class="QDoubleSpinBox" name="lyricsDistance">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
@@ -509,7 +532,7 @@
             </property>
            </widget>
           </item>
-          <item row="3" column="2">
+          <item row="4" column="2">
            <widget class="QLabel" name="label_71">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
@@ -522,7 +545,7 @@
             </property>
            </widget>
           </item>
-          <item row="3" column="3">
+          <item row="4" column="3">
            <widget class="QDoubleSpinBox" name="lyricsMinBottomDistance">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
@@ -541,7 +564,7 @@
             </property>
            </widget>
           </item>
-          <item row="4" column="0">
+          <item row="7" column="0">
            <widget class="QLabel" name="label_74">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
@@ -557,7 +580,7 @@
             </property>
            </widget>
           </item>
-          <item row="4" column="1">
+          <item row="7" column="1">
            <widget class="QDoubleSpinBox" name="systemFrameDistance">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
@@ -576,7 +599,7 @@
             </property>
            </widget>
           </item>
-          <item row="4" column="2">
+          <item row="7" column="2">
            <widget class="QLabel" name="label_75">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
@@ -592,7 +615,7 @@
             </property>
            </widget>
           </item>
-          <item row="4" column="3">
+          <item row="7" column="3">
            <widget class="QDoubleSpinBox" name="frameSystemDistance">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
@@ -611,7 +634,7 @@
             </property>
            </widget>
           </item>
-          <item row="5" column="0">
+          <item row="8" column="0">
            <widget class="QLabel" name="label_79">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
@@ -630,7 +653,7 @@
             </property>
            </widget>
           </item>
-          <item row="5" column="1">
+          <item row="8" column="1">
            <widget class="QDoubleSpinBox" name="pageFillThreshold">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
@@ -655,7 +678,7 @@
             </property>
            </widget>
           </item>
-          <item row="5" column="2">
+          <item row="8" column="2">
            <widget class="QLabel" name="label_77">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
@@ -668,7 +691,7 @@
             </property>
            </widget>
           </item>
-          <item row="5" column="3">
+          <item row="8" column="3">
            <widget class="QDoubleSpinBox" name="lastSystemFillThreshold">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
@@ -690,27 +713,14 @@
             </property>
            </widget>
           </item>
-          <item row="7" column="0" colspan="2">
-           <widget class="QCheckBox" name="genClef">
-            <property name="sizePolicy">
-             <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-              <horstretch>0</horstretch>
-              <verstretch>0</verstretch>
-             </sizepolicy>
-            </property>
-            <property name="text">
-             <string>Create clef for all systems</string>
-            </property>
-           </widget>
-          </item>
-          <item row="7" column="2">
+          <item row="10" column="2">
            <widget class="QCheckBox" name="genCourtesyClef">
             <property name="text">
              <string>Create courtesy clefs</string>
             </property>
            </widget>
           </item>
-          <item row="8" column="0" colspan="2">
+          <item row="11" column="0" colspan="2">
            <widget class="QCheckBox" name="genTimesig">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
@@ -723,7 +733,7 @@
             </property>
            </widget>
           </item>
-          <item row="8" column="2" colspan="2">
+          <item row="11" column="2" colspan="2">
            <widget class="QCheckBox" name="genCourtesyTimesig">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
@@ -736,7 +746,7 @@
             </property>
            </widget>
           </item>
-          <item row="9" column="0" colspan="2">
+          <item row="12" column="0" colspan="2">
            <widget class="QCheckBox" name="genKeysig">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
@@ -749,14 +759,14 @@
             </property>
            </widget>
           </item>
-          <item row="9" column="2" colspan="2">
+          <item row="12" column="2" colspan="2">
            <widget class="QCheckBox" name="genCourtesyKeysig">
             <property name="text">
              <string>Create courtesy key signatures</string>
             </property>
            </widget>
           </item>
-          <item row="10" column="0">
+          <item row="13" column="0">
            <spacer>
             <property name="orientation">
              <enum>Qt::Vertical</enum>
@@ -769,7 +779,7 @@
             </property>
            </spacer>
           </item>
-          <item row="6" column="0">
+          <item row="9" column="0">
            <spacer name="verticalSpacer_9">
             <property name="orientation">
              <enum>Qt::Vertical</enum>
@@ -784,6 +794,42 @@
              </size>
             </property>
            </spacer>
+          </item>
+          <item row="6" column="0" colspan="4">
+           <widget class="QFrame" name="frame_3">
+            <property name="frameShape">
+             <enum>QFrame::HLine</enum>
+            </property>
+            <property name="frameShadow">
+             <enum>QFrame::Raised</enum>
+            </property>
+           </widget>
+          </item>
+          <item row="5" column="0">
+           <widget class="QLabel" name="label_36">
+            <property name="text">
+             <string>Lyrics line height</string>
+            </property>
+           </widget>
+          </item>
+          <item row="5" column="1">
+           <widget class="QDoubleSpinBox" name="lyricsLineHeight">
+            <property name="suffix">
+             <string notr="true">%</string>
+            </property>
+            <property name="decimals">
+             <number>1</number>
+            </property>
+            <property name="minimum">
+             <double>10.000000000000000</double>
+            </property>
+            <property name="maximum">
+             <double>500.000000000000000</double>
+            </property>
+            <property name="value">
+             <double>100.000000000000000</double>
+            </property>
+           </widget>
           </item>
          </layout>
         </widget>
